# DPSM_Gestor_PreICFES

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
qml/: Main.qml
qml/components/: BoletinConfirmDialog.qml  CustomAlert.qml  DatePicker.qml  ExportAllBoletinesDialog.qml  NavButton.qml  ResultPopup.qml  ResultRow.qml  SimulacrumDeleteDialog.qml  SimulacrumRow.qml  SimulacrumWizard.qml  SimulcrumCard.qml  StudentDetailPopup.qml  StudentRow.qml  StudentWizarad.qml  SubjectInput.qml  TableTopList.qml
qml/views/: ConfigView.qml  DashboardView.qml  SimulacrumDetailView.qml  SimulacrumStatsView.qml  SimulacrumView.qml  StudentsView.qml
src/application/: simulacrum_service.h
src/domain/: booklet.h  result.h  simulacrum.h  student.h
src/infraestructure/: database_manager.h
src/presentation/: simulacrum_controller.cpp  simulacrum_controller.h
src/templates/: boletin.html  stylesheet.css
